# skaia

./: .gitignore  .gitmodules  08_personal_secret  09_annas_archive  README.md  activate  apply-all.sh  backup-now.sh  bringup.txt  fix-headscale-primary-routes.py  flake.nix  fmt.sh  globals.yaml  notes.txt  trigger-cronjob.sh
00_becquerel/: .terraform.lock.hcl  main.tf  variables.tf
01_tailnet/: .terraform.lock.hcl  main.tf
02_talos_image/: .terraform.lock.hcl  install.py  main.tf  variables.tf
03_talos_linodes/: .terraform.lock.hcl  main.tf  variables.tf
04_talos/: .terraform.lock.hcl  main.tf
05_kube_essential/: .terraform.lock.hcl  cni.tf  debug.tf  debug_image.nix  main.tf  variables.tf
05_kube_essential/cni/: image.nix  main.tf
05_kube_essential/cni/crate/: Cargo.toml
05_kube_essential/cni/crate/src/: cni_config.rs  cni_plugins.rs  error.rs  interfaces.rs  kubernetes.rs  main.rs  masquerading.rs  routes.rs  util.rs
05_kube_essential/cni_images/config-writer/crate/: Cargo.toml
05_kube_essential/debug/: image.nix  main.tf
05_kube_essential/debug_image/: Containerfile
05_kube_system/: cni.tf  debug.tf  main.tf  theila.tf
05_kube_system/cni_images/route-advertiser/crate/: Cargo.toml
05_kube_system/cni_images/route-advertiser/crate/src/: main.rs  util.rs
05_kube_system/debug_image/: Containerfile
06_kube_services/: .terraform.lock.hcl  backup.tf  cloudflared_metrics.tf  imports.tf.disabled  kube_network_policies_metrics.tf  local_pvs.tf  main.tf  rook_ceph_grafana.tf  variables.tf
06_kube_services/cloudflared/: main.tf
06_kube_services/coredns/: main.tf
06_kube_services/rook_ceph/imperative_config_image/crate/: Cargo.toml
06_kube_services/rook_ceph/imperative_config_image/crate/src/: auth.rs  crush_map.rs  error.rs  main.rs  settings.rs
06_rook_ceph_operator/: main.tf
07_personal/: .terraform.lock.hcl  adhoc.tf  main.tf  variables.tf
07_personal/devenv/: image.nix  (+1 more)
07_personal_apps/: .terraform.lock.hcl  adhoc.tf  adhoc.tf.sav  main.tf
07_rook_ceph_cluster/: cluster.tf  imperative_config.tf  main.tf  storage_classes.tf  toolbox.tf
09_personal_apps/: .terraform.lock.hcl  main.tf
for_future_reference/: archive-to-object-store.yaml  media-fs-sync.yaml  openttd.yaml  pmacct-test.yaml  rcworlds-server.yaml  rcworlds.yaml  restic-tools.yaml  restore-archive.yaml  restore-music.yaml  valheim.cue
(+188 files in other folders)
