[package]
name = "skaia-cni"
version = "0.1.0"
edition = "2024"
rust-version = "1.89" # std::ffi::OsString::leak

[dependencies]
cidr = "0.3.1"
env_logger = { version = "0.11.8", default-features = false }
futures-util = "0.3.31"
k8s-openapi = { version = "0.25.0", features = ["v1_33"] }
kube = { version = "1.1.0", features = ["client", "runtime", "rustls-tls"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["fs", "io-util", "macros", "process", "rt", "sync"] }
