[package]
name = "config-writer"
version = "0.1.0"
edition = "2021"

[dependencies]
cidr = "0.2.2"
env_logger = { version = "0.11.1", default-features = false }
futures-util = "0.3.30"
k8s-openapi = { version = "0.21.0", default-features = false, features = ["v1_29"] }
kube = { version = "0.88.1", default-features = false, features = ["client", "runtime", "rustls-tls"] }
log = "0.4.20"
pin-project = "1.1.4"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0.56"
tokio = { version = "1.36.0", default-features = false, features = ["fs", "macros", "rt"] }
