[package]
name = "route-advertiser"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = { version = "0.11.1", default-features = false }
futures-util = "0.3.30"
k8s-openapi = { version = "0.21.0", default-features = false, features = ["v1_29"] }
kube = { version = "0.88.1", default-features = false, features = ["client", "runtime", "rustls-tls"] }
log = "0.4.20"
pin-project = "1.1.4"
thiserror = "1.0.56"
tokio = { version = "1.36.0", default-features = false, features = ["macros", "process", "rt"] }
