[package]
name = "rook-ceph-imperative-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0.11.1", default-features = false }
lazy_static = "1.4.0"
log = "0.4.20"
regex = "1.10.3"
similar = "2.4.0"
thiserror = "1.0.56"
